# E-LEARNING

./: .gitignore  PROJECT.md  fix_icons.py  fix_user_icon.py  package-lock.json  package.json
BACKEND/: add_target_groups.py  alter_db.py  check_db.py  main.py  pyproject.toml  requirements.txt  seed_data.py  tmp_migrate.py
BACKEND/Core/: Config.py  Database.py  Dependencies.py  MeetingState.py  Security.py
BACKEND/Models/: Assignment.py  Attendance.py  Community.py  Course.py  Innovation.py  Lesson.py  MailMessage.py  Notification.py  Placement.py  PlatformAdmin.py  Project.py  Quiz.py  Schedule.py  SystemRule.py  User.py
BACKEND/Routes/: AdminRoute.py  AssignmentRoute.py  AuthRoute.py  CourseRoute.py  FacultyRoute.py  MailRoute.py  NotificationRoute.py  PlacementRoute.py  StudentRoute.py  auth.py
BACKEND/Schemas/: AssignmentSchema.py  CommunitySchema.py  CourseSchema.py  FacultySchema.py  LessonSchema.py  PlacementSchema.py  ProjectSchema.py  QuizSchema.py  StudentSchema.py  UserSchema.py
BACKEND/Service/: AdminService.py  AssignmentService.py  Auth.py  CourseService.py  FacultyService.py  GroqService.py  MailService.py  NotificationService.py  PlacementService.py  QuizService.py  StudentService.py
BACKEND/Sockets/: MeetingSockets.py
FRONTEND/: add_button_clicks.py  build-error.txt  fix_css_cursors.py  index.html  package-lock.json  package.json  remove_cursor.py  requirments.txt
FRONTEND/src/: App.css  App.jsx  index.css  main.jsx
FRONTEND/src/router/: AppRouter.jsx  ErrorBoundary.jsx  RoleRoute.jsx
tmp/: base.jsx  head_new.jsx  ours.jsx  theirs.jsx
(+185 files in other folders)
