[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.133.1",
    "passlib>=1.7.4",
    "psycopg>=3.3.3",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "python-socketio>=5.16.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]
